examples/test/testpolicy8128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8128
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key19: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value37
          key42: value28
          key6: value35
      podSelector:
        matchLabels:
          key39: value14
          key20: value39
          key49: value15
